# cpca-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml
benches/: parse_benchmark.rs
examples/: demo.rs  test_county.rs  test_short.rs
scripts/: release.sh
src/: data.rs  error.rs  lib.rs  parser.rs  region.rs  trie.rs
