[package]
name = "cpca"
version = "0.2.1"
edition = "2021"
authors = ["laofahai"]
description = "Chinese Province, City and Area Parser - 中国省市区地址解析库"
license = "MIT"
repository = "https://github.com/laofahai/cpca-rs"
documentation = "https://docs.rs/cpca"
readme = "README.md"
keywords = ["chinese", "address", "parser", "province", "city"]
categories = ["text-processing", "localization"]
include = [
    "src/**/*",
    "data/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
once_cell = "1"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "parse_benchmark"
harness = false
